--- a/src/components/menulist/MenuItem.css
+++ b/src/components/menulist/MenuItem.css
@@ -19,6 +19,14 @@
     align-self: center;
 }
 
+.card__button {
+    display: block;
+    font-size: 15px;
+    margin-left: auto;
+    margin-right: 2rem;
+    align-self: center;
+}
+
 .card__price {
     padding-left: 20px;
     align-self: center;
